added heading 1 and a short explination of everything that will be on the page

--- a/Austins_cheet_sheet.html
+++ b/Austins_cheet_sheet.html
@@ -6,9 +6,16 @@
 <meta charset="utf-8">
 <title>Austin's cheet sheet</title>
 
+
+
 </head>
 
 <body>
+   <h1> Welcome to Austin Brown's cheet sheet for Unix commands</h1>
+   
+   
+    <p> This page will give simple examples and commands that are commonly
+    found and used while using the command line</p>
 
 </body>
 </html>
