added a table with first entry and got most the formating working git status

--- a/Austins_cheet_sheet.html
+++ b/Austins_cheet_sheet.html
@@ -15,7 +15,22 @@
    
    
     <p> This page will give simple examples and commands that are commonly
-    found and used while using the command line</p>
+    found and used while using the command line.</p>
+    
+    <h2> Unix commands</h2>
+    <table border ="2">
+        <tr>
+            <th> The Command</th>
+            <th> what it dose</th>
+            <th> example of:</th>
+        </tr>
+        <tr>
+            <td> ls</td>
+            <td> Prints out a list of files in derectory.</td>
+            <td> <font face="monospace"> <b>~/workspace $ ls 
+            <Br>README.md  hello-world.html</b></font> </td>
+        </tr>
+    </table>
 
 </body>
 </html>
