--- a/Austins_cheet_sheet.html
+++ b/Austins_cheet_sheet.html
@@ -9,7 +9,7 @@
 
 <body>
    <h1> Welcome to Austin Brown's cheet sheet for Unix commands</h1>
-   <img src="unix-linux.png"
+   <img src="unix-linux.png" alt="There was a problem loading the image."
    style ="width:200px;height:100px">
    
     <p> This page will give simple examples and commands that are commonly
