--- a/Austins_cheet_sheet.html
+++ b/Austins_cheet_sheet.html
@@ -5,6 +5,9 @@
 <head>
 <meta charset="utf-8">
 <title>Austin's cheet sheet</title>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
+
+
 </head>
 
 <body>
